# hexlet_hello_virtual-environment

./: README.md  pyproject.toml
hello/scripts/: say_hello.py
